# holiday_card_2022

./: LICENSE.txt  README.md  card_maker.ipynb  inside.gcode  outside.gcode  pyproject.toml  tree_maker.ipynb
data/: README.txt
holiday_card/: __init__.py  hershey_text.py  heshey_text.py  renderers.py  trees.py  utilities.py
