[tool.poetry]
name = "holiday-card"
version = "0.1.0"
description = "Generate a holiday card the hard way"
authors = ["palbee"]
readme = "README.md"
packages = [{include = "holiday_card"}]

[tool.poetry.dependencies]
python = "~3.10"
numpy = "^1.23.4"
matplotlib = "^3.6.1"
jupyterlab = "^3.4.8"
bqplot = "^0.12.36"
scikit-spatial = "^6.6.0"
pylint = "^2.15.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

